--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,21 @@
 /* You can add global styles to this file, and also import other style files */
+/* body{
+    background: #BA5370;  /* fallback for old browsers */
+    /* background: -webkit-linear-gradient(to right, #F4E2D8, #BA5370);  Chrome 10-25, Safari 5.1-6 */
+    /* background: linear-gradient(to right, #F4E2D8, #BA5370); W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+/* } */ 
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
+
+.anton-sc-regular {
+    font-family: "Anton SC", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+}
+
+body{
+    margin: 0px;
+}
+
+.toolbar-spacer {
+    flex: 1 1 auto;
+}
