--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -18,4 +18,25 @@
         </div>
     </mat-toolbar>  
 
+    <h2 class="anton-sc-regular" style="color: white; text-align: center;">Welcome to Gym Buddy</h2>
+
+    <div class="features" style="height: 83vh;margin-top: 10%;">
+
+        <div class="feature-tile">
+            <p class="anton-sc-regular tile-text">Forum</p>
+            <p class="anton-sc-regular tile-subtext">A common place for all you gym freaks to chat, chill and connect.</p>
+        </div>
+
+        <div class="feature-tile">
+            <p class="anton-sc-regular tile-text">Find a Trainer</p>
+            <p class="anton-sc-regular tile-subtext">Find a person who is ready to guide and train you at your gym!</p>
+        </div>
+
+        <div class="feature-tile" (click) = "registerPage()">
+            <p class="anton-sc-regular tile-text">Register as a Trainer</p>
+            <p class="anton-sc-regular tile-subtext">Register yourself as a trainer and earn money by guiding people who need help in their workouts</p>
+        </div>
+
+    </div>
+
 </body>
