Started working on trainer regisration

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -6,6 +6,7 @@
 
 <body>
     <div class="main-container" style="height: 100%;">
+        <div id="recaptcha-container"></div>
         <h2 class="anton-sc-regular title" style="color: white;">Welcome</h2>
         <h3 class="anton-sc-regular title subtitle" style="color: white;">Login and let the gains begin</h3>
         <form class="login-form">       
