Added sessions page

--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -37,7 +37,7 @@
             <p class="anton-sc-regular tile-subtext">Register yourself as a trainer and earn money by guiding people who need help in their workouts</p>
         </div>
 
-        <div *ngIf = "isTrainer" class="feature-tile" (click) = "registerPage()">
+        <div *ngIf = "isTrainer" class="feature-tile" (click) = "sessionsPage()">
             <p class="anton-sc-regular tile-text">Workout session requests</p>
             <p class="anton-sc-regular tile-subtext">As a trainer, you can find your workout sessions that people have requested for, here.</p>
         </div>
