--- a/src/styles.css
+++ b/src/styles.css
@@ -24,3 +24,28 @@ body{
     width: 80%;
     margin-left: 10%;
 }
+
+.toolbar-button{
+    width: 15%;
+    height: 85%;
+    color: white;
+    font-size: 18px;
+    text-align: center;
+    border-left: 1px solid rgb(82, 82, 82);
+    padding: 5px;
+}
+
+.toolbar-button-session{
+    width: 50%;
+    height: 85%;
+    color: white;
+    font-size: 18px;
+    text-align: center;
+    border-left: 1px solid rgb(82, 82, 82);
+    border-top: 1px solid rgb(82, 82, 82);
+    padding: 5px;
+}
+
+.toolbar-text{
+    margin-top: 10px;
+}
