--- a/src/app/session-detail/session-detail.component.css
+++ b/src/app/session-detail/session-detail.component.css
@@ -7,11 +7,24 @@ body{
 }
 
 .session-detail-card{
-    height: 60vh;
+    height: 58vh;
     width: 80%;
     background-color: rgb(82, 82, 82);
     margin-left: 8%;
     padding: 15px;
     border-radius: 10px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.confirm-text{
+    color: white;
+    text-align: center;
+    padding-top: 20px;
+    font-size: 20px;
+}
+
+.confirm-button{
+    background-color: black; 
+    height: 5rem;
+    border-radius: 10px;
 }
