--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -22,9 +22,9 @@
 
     <div class="features" style="height: 83vh;margin-top: 10%;">
 
-        <div class="feature-tile">
-            <p class="anton-sc-regular tile-text">Forum</p>
-            <p class="anton-sc-regular tile-subtext">A common place for all you gym freaks to chat, chill and connect.</p>
+        <div class="feature-tile" (click)="bookNewSession()">
+            <p class="anton-sc-regular tile-text">Book new session</p>
+            <p class="anton-sc-regular tile-subtext">Request a workout session with one of our amazing trainers.</p>
         </div>
 
         <div class="feature-tile">
