--- a/src/app/book-session/book-session.component.css
+++ b/src/app/book-session/book-session.component.css
@@ -10,3 +10,18 @@ body{
     width: 80%;
     margin-left: 10%;
 }
+
+.book-session{
+    height: 45px;
+    width: 60%;
+    background-color: black;
+    border-radius: 8px;
+    margin-left: 20%;
+    margin-top: 6%;
+    margin-bottom: 4%;
+    border-style: 1px solid black;
+    text-align: center;
+    font-size: 20px;
+    border: 1px solid white;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
