--- a/src/app/session-detail/session-detail.component.html
+++ b/src/app/session-detail/session-detail.component.html
@@ -19,10 +19,11 @@
     </mat-toolbar>
 
     <h1 class="anton-sc-regular tile-text" style="text-align: center; color: white;">Workout session with {{username}}</h1>
-    <div class="session-detail-card" [ngStyle] = "{'height': (status == 'Confirmed') ? '68vh' : '58vh'}">
+    <div class="session-detail-card">
         <p class="anton-sc-regular tile-text">Client: {{username}}</p><br/>
         <p class="anton-sc-regular tile-text">Location: {{location}}</p><br/>
         <p class="anton-sc-regular tile-text">Workout session requested for:<br/> {{date}} <br/>Time: {{time}}</p><br/>
+        <p class="anton-sc-regular tile-text">Duration: {{hours}} hrs</p>
         <p class="anton-sc-regular tile-text">Description: {{description}}</p>
         <p class="anton-sc-regular tile-text" style="font-size: 20px;">Based on your experience and the number of hours requested 
             for this session, you can earn ₹{{rate}}/-.</p>
