Corrected find trainer logic

--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -28,7 +28,7 @@
         </div>
 
         <div class="feature-tile">
-            <p class="anton-sc-regular tile-text">Find a Trainer</p>
+            <p class="anton-sc-regular tile-text" (click)="findTrainer()">Find a Trainer</p>
             <p class="anton-sc-regular tile-subtext">Find a person who is ready to guide and train you at your gym!</p>
         </div>
 
