--- a/src/styles.css
+++ b/src/styles.css
@@ -53,3 +53,17 @@ body{
 .darkgrey-text{
     color: #222222;
 }
+
+.black-button{
+    height: 45px;
+    width: 60%;
+    background-color: black;
+    border-radius: 8px;
+    margin-left: 8%;
+    margin-top: 6%;
+    border-style: 1px solid black;
+    text-align: center;
+    font-size: 20px;
+    border: 1px solid white;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
