Added search trainer func

--- a/src/app/find-trainer/find-trainer.component.html
+++ b/src/app/find-trainer/find-trainer.component.html
@@ -32,5 +32,19 @@
             <div class="black-button anton-sc-regular" style="margin-left: 21%;margin-top: 0%;" (click)="searchGym()">
                 <span style="margin-top: 45%;color: white;">Search</span>
             </div>
+
+            <div class="sessions-cards">
+                @for(trainer of trainers; track trainer){
+                <mat-card class="session-card">
+                    <mat-card-content style="margin-top: 20px;">
+                    <p class="anton-sc-regular tile-text">Trainer name: {{trainer.username}}</p>
+                    <p class="anton-sc-regular tile-text">Experience: {{trainer.exp}} years</p>
+                    <p class="anton-sc-regular tile-text">Availability: {{trainer.availdays}} | {{trainer.availtime}} | {{trainer.meridian}}</p>
+                    <p class="anton-sc-regular tile-text">About: {{trainer.bio}} </p>
+                    <p class="anton-sc-regular tile-text" style="text-align: center; color: white;">Click to know more</p>
+                    </mat-card-content>
+                </mat-card>
+                }
+            </div>
     </div>
 </body>
