--- a/src/app/find-trainer/find-trainer.component.css
+++ b/src/app/find-trainer/find-trainer.component.css
@@ -25,3 +25,17 @@ body{
     margin-top: 20%;
     width: 75%;
 }
+
+.session-card{
+    width: 90%;
+    height: 20%;
+    margin-top: 5%;
+    margin-bottom: 5%;
+    margin-left: 4%;
+    display: inline-block;
+    padding: 10px;
+    background-color: rgb(82, 82, 82);
+    border-radius: 10px;
+    cursor: pointer;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
