--- a/src/app/home-page/home-page.component.css
+++ b/src/app/home-page/home-page.component.css
@@ -13,6 +13,7 @@ body{
     font-size: 18px;
     text-align: center;
     border-left: 1px solid rgb(82, 82, 82);
+    border-right: 1px solid rgb(82, 82, 82);
     padding: 5px;
 }
 
