--- a/src/app/session-detail/session-detail.component.html
+++ b/src/app/session-detail/session-detail.component.html
@@ -6,27 +6,30 @@
 
 <body>
     <mat-toolbar style="background-color: gray;padding-right: 0px;">
+        <div class="home-button toolbar-button" (click) = "goBack()" style="border-left: 1px;">
+            <p class="home-button-text toolbar-text">Back</p>
+          </div>
         <span class="toolbar-spacer"></span>
-        <div class="home-button toolbar-button" style="margin-right: 10px;">
+        <div class="home-button toolbar-button" style="margin-right: 10px;"  (click) = "goToHome()">
             <p class="home-button-text toolbar-text">Home</p>
         </div>
-        <div class="about-button toolbar-button" style="margin-right: 10px;">
-            <p class="about-button-text toolbar-text">About</p>
-        </div>
-        <div class="contact-button toolbar-button" style="margin-right: 10px;">
-            <p class="contact-button-text toolbar-text">Contact</p>
-        </div>
+        <img src="../../assets/icons/menu.svg" [matMenuTriggerFor]="menu" height="40px" width="40px" style="padding-right: 10px;"/>
+        <mat-menu #menu="matMenu">
+            <button mat-menu-item>My requested sessions</button>
+            <button mat-menu-item>About</button>
+            <button mat-menu-item (click) = "logout()">Log out</button>
+        </mat-menu>
     </mat-toolbar>
 
     <h1 class="anton-sc-regular tile-text" style="text-align: center; color: white;">Workout session with {{username}}</h1>
     <div class="session-detail-card">
         <div style="height: 75%; overflow-y: scroll;">
-            <p class="anton-sc-regular tile-text">Client: {{username}}</p><br/>
-            <p class="anton-sc-regular tile-text">Location: {{location}}</p><br/>
-            <p class="anton-sc-regular tile-text">Workout session requested for:<br/> Date: {{date}} <br/>Time: {{time}}</p>
-            <p class="anton-sc-regular tile-text">Duration: {{hours}} hrs</p><br/>
-            <p class="anton-sc-regular tile-text">Description: {{description}}</p>
-            <p class="anton-sc-regular tile-text" style="font-size: 20px;">Based on your experience and the number of hours requested 
+            <p class="anton-sc-regular tile-text" style="font-size: 20px;">Client: {{username}}</p><br/>
+            <p class="anton-sc-regular tile-text" style="font-size: 20px;">Location: {{location}}</p><br/>
+            <p class="anton-sc-regular tile-text" style="font-size: 20px;">Workout session requested for:<br/> Date: {{date}} <br/>Time: {{time}}</p>
+            <p class="anton-sc-regular tile-text" style="font-size: 20px;">Duration: {{hours}} hrs</p><br/>
+            <p class="anton-sc-regular tile-text" style="font-size: 20px;">Description: {{description}}</p>
+            <p class="anton-sc-regular tile-text" >Based on your experience and the number of hours requested 
                 for this session, you can earn ₹{{rate}}/-.</p>
         </div>
         <div style="height: 25%;">
@@ -36,7 +39,7 @@
             <div *ngIf = "status == 'Confirmed'" class="confirm-button" (click)="startSession()">
                 <p class="anton-sc-regular tile-text confirm-text">Start Session</p><br/>
             </div>
-            <div *ngIf = "status == 'Confirmed' || status == 'Requested' || status == 'Pending'" class="confirm-button" (click)="cancelSession()">
+            <div *ngIf = "status == 'Confirmed' || status == 'Requested'" class="confirm-button" (click)="cancelSession()">
                 <p class="anton-sc-regular tile-text confirm-text">Cancel Session</p><br/>
             </div>
             <div *ngIf = "status == 'Started'" class="confirm-button" (click)="endSession()">
